--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -8,6 +8,10 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "jsx": "react-jsx"
