--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,11 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "typecheck": "tsc --noEmit -p tsconfig.app.json",
+    "deadcode": "knip --reporter compact",
+    "prune": "ts-prune",
+    "depcheck": "depcheck",
+    "verify": "npm run typecheck && npm run lint",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -24,9 +29,13 @@
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
+    "eslint-plugin-unused-imports": "^4.0.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "knip": "^5.27.0",
+    "ts-prune": "^0.10.3",
+    "depcheck": "^1.4.7",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3",
